--- a/configs/tijuana_example.yaml
+++ b/configs/tijuana_example.yaml
@@ -22,6 +22,7 @@ parcels_config:
     - pyplume.kernels.AgeParticle
     - pyplume.kernels.RandomWalk5cm
     - pyplume.kernels.DeleteAfter3Days
+    - pyplume.kernels.DeleteStatusOutOfBounds
   time_range: [START, END]
   repeat_dt: 7200
   repetitions: -1
@@ -38,6 +39,7 @@ plotting_config:
       label: particleplots
       coastline: true
       draw_currents: true
+      particle_color: lifetime
       domain:
         S: 32.525
         N: 32.7
