--- a/configs/download/test.yaml
+++ b/configs/download/test.yaml
@@ -1,10 +1,25 @@
-test_data:
-  url: http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USEGC/6km/hourly/RTV/HFRADAR_US_East_and_Gulf_Coast_6km_Resolution_Hourly_RTV_best.ncd
-  time_range: [2020-01-01T00:00, 2020-02-01T00:00]
-  lat_range: [38.0, 41.6]
-  lon_range: [-74.02, -69.90]
+test_data_2km:
+  url: http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USEGC/2km/hourly/RTV/HFRADAR_US_East_and_Gulf_Coast_2km_Resolution_Hourly_RTV_best.ncd
+  time_range: [2021-03-01T00, 2021-03-30T00]
+  lat_range: [38, 40]
+  lon_range: [-76, -74]
   inclusive: true
-  filesplit: 24
+  filesplit: 72
+  u_key: null
+  v_key: null
+  time_key: null
+  lat_key: null
+  lon_key: null
+  depth_key: null
+  drop_vars: null
+  folder: data/stuff/
+test_data_6km:
+  url: http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USEGC/6km/hourly/RTV/HFRADAR_US_East_and_Gulf_Coast_6km_Resolution_Hourly_RTV_best.ncd
+  time_range: [2021-03-01T00, 2021-03-30T00]
+  lat_range: [38, 40]
+  lon_range: [-76, -74]
+  inclusive: true
+  filesplit: 72
   u_key: null
   v_key: null
   time_key: null
